<?xml version="1.0"?>
<package>
  <name>ros_clipper</name>
  <version>0.0.1</version>
  <description>The ros_clipper catkin wrapper package</description>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>